...
        android:paddingTop="@dimen/activity_bottom_bar_image_view_padding_top"
        android:scaleType="fitXY"
        android:src="@drawable/bottombar_separator" />

    <ImageButton
        style="@style/BottomBarImageButton"
        android:id="@+id/button_play"
        android:onClick="handlePlayButton"
        android:src="@drawable/ic_play" />

</LinearLayout>
