...
            android:layout_marginTop="@dimen/key_margin"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_compute"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_bracket_open"
            style="@style/FormulaEditorButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_span="1"
            android:text="@string/formula_editor_bracket_open" />

        <Button
            android:id="@+id/formula_editor_keyboard_bracket_close"
            style="@style/FormulaEditorButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_span="1"
            android:text="@string/formula_editor_bracket_close" />

        <ImageButton
            android:id="@+id/formula_editor_keyboard_delete"
            style="@style/FormulaEditorImageButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_height="match_parent"
            android:contentDescription="@string/formula_editor_image_button_description_delete"
            android:src="@android:drawable/ic_input_delete"
            android:layout_span="2" />
...
        android:layout_weight="1"  >

        <Button
            android:id="@+id/formula_editor_keyboard_object"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_object"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_7"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/formula_editor_keyboard_8"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/formula_editor_keyboard_9"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_9" />

        <Button
            android:id="@+id/formula_editor_keyboard_divide"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_divide" />
    </TableRow>

    <TableRow
...
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_functions"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_4"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/formula_editor_keyboard_5"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/formula_editor_keyboard_6"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/formula_editor_keyboard_mult"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_mult" />
    </TableRow>

    <TableRow
...
        android:layout_weight="1"  >

        <Button
            android:id="@+id/formula_editor_keyboard_logic"
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_logic"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_1"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/formula_editor_keyboard_2"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/formula_editor_keyboard_3"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/formula_editor_keyboard_minus"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_minus" />
    </TableRow>

    <TableRow
...
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_device"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_decimal_mark"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_decimal_mark" />

        <Button
            android:id="@+id/formula_editor_keyboard_0"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/formula_editor_keyboard_equal"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_logic_equal" />

        <Button
            android:id="@+id/formula_editor_keyboard_plus"
            style="@style/FormulaEditorButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_plus" />
    </TableRow>

    <TableRow
...
            style="@style/FormulaEditorButton"
            android:layout_marginLeft="@dimen/key_margin"
            android:text="@string/formula_editor_data"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_string"
            style="@style/FormulaEditorButton"
            android:text="@string/formula_editor_string"
            android:layout_span="2" />

        <Button
            android:id="@+id/formula_editor_keyboard_ok"
            style="@style/FormulaEditorButton"
            android:text="@string/ok"
            android:layout_span="2" />
    </TableRow>
</TableLayout>

