...
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_formula_editor_list_item"
    style="@style/sound_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/button_background_selector"
    android:gravity="center_vertical"
    android:paddingLeft="10dp"
...
